--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eveniet quia dicta dolorum, fugiat dolores est minima architecto blanditiis sed excepturi eos expedita. Error, commodi! Doloremque sapiente atque explicabo quibusdam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem recusandae possimus ducimus ad non expedita tempore mollitia enim rem quae voluptate, sequi neque fuga doloribus eligendi quod est similique nesciunt.</p>
         </article>
     </main>
 </body>
